vlib/v/checker/tests/generic_sumtype_alias_distinct_variant_match.vv
type GenericAliasA = int
type GenericAliasB = int
type GenericAliasBox[T] = GenericAliasA | T

fn main() {
	value := GenericAliasBox[string](GenericAliasA(1))
	match value {
		GenericAliasB {
			println('bad')
		}
		string {
			println(value)
		}
	}
}
